# dotfiles

./: '  .Xresources  .gitconfig  .gitignore  .ideavimrc  .todos.json  .vimrc  README.md  README.org  UI.org  additinoal_installation.md  config.yaml  detailed_installation_guide.md  installation.md  nohup.out  sync.sh  unprocessed_tutorial.md
.config/alacritty/: alacritty.yml
.config/bspwm/: autostart.sh  bspwmrc
.config/eww/: eww.yuck
.config/fish/: config.fish  fish_variables
.config/picom/: picom.conf
.config/polybar/: config.ini  launch.sh  modules.ini
.config/ranger/: '  README.md  rc.conf  rifle.conf  scope.sh
.config/rofi/: config.rasi
.config/sxhkd/: sxhkdrc
.config/zathura/: zathurarc
additional/: '  flutter.md
assets/fonts/: nohup.out
assets/icons/: deepin2022.tar.xz
docs/: README.md  _sidebar.md  additional_installation.md  beautify.md  before_hacking.md  collection.org  detailed_installation_guide.md  environment.org  index.html  install.md  install.sh  installation.org  installation.sh  optional.sh  other.md  post.sh  settings.org  tips.md  todo.md  unclassified.org
docs_bak/: additional_installation.md  detailed_installation_guide.md
docs_bak/additional/: kvm_setup.md
dotfiles/: bashrc  gitconfig  gitignore_global  gitmessage.txt  gtkrc-2.0  ideavimrc  msmtp-password-gmail.gpg  msmtprc  npmrc  profile  todos.json  vimrc  xsession  yarnrc
dotfiles/cargo/: config.toml
dotfiles/config/: chromium-flags.conf  mimeapps.list  rofimoji.rc
dotfiles/config/fish/project_templates/rust/: Cargo.toml  Makefile  README.md  README.org
dotfiles/docker/: config.json
dotfiles/gnupg/: gpg-agent.conf
dotfiles/myBin/: ,mem  ,mu  ,todo  ,update_all  brightness_notify  clox  display_clipboard_image  emoji_selector  get-mu-unread-emails-num  nemacs-wl-copy-file  open  phone_notify  rangerPersistent  simple_ocr  sync.sh  syncOrgzly  toggle_picom_animation  winhide  (+5 more)
myBin/: sync.sh
scripts/: preinstallation.sh
(+269 files in other folders)
