[package]
name = "#{NAME}#"
description = ""
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/Ziqi-Yang/#{NAME}#"
repository = "https://github.com/Ziqi-Yang/#{NAME}#"
readme = "README.org"
license = "MIT"
authors = ["Ziqi Yang <mr.ziqiyang@gmail.com>"]
# keywords = []
categories = ["command-line-utilities"] # https://crates.io/category_slugs

[badges]
maintenance = { status = "none" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
