[package]
name = "#{NAME}#"
description = "" # NOTE
version = "0.1.0"
edition = "2021"
homepage = "https://todo.sr.ht/~meow_king/#{NAME}#"
repository = "https://todo.sr.ht/~meow_king/#{NAME}#"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Meow King <mr.meowking@anche.no>"] # NOTE
keywords = [] # NOTE
# https://crates.io/category_slugs
categories = ["command-line-utilities"]  # NOTE

# cargo build --profile release-lto
[profile.release-lto]
inherits = "release"
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
